--- a/5-odenis-catdirilma/index.html
+++ b/5-odenis-catdirilma/index.html
@@ -379,7 +379,39 @@
         </div>
     </header>
 
-    <main class="py-5"></main>
+    <main class="py-5 sobsan-odenis container d-flex flex-column align-items-center justify-content-center">
+        <div class="main-top-header d-flex flex-column w-100">
+            <div class="links"><a href="../1-main/index.html">Əsas Səhifə</a><i class="fa-solid fa-chevron-right"></i><a href="../5-odenis-catdirilma/index.html">Ödəniş və çatdırılma</a></div>
+            <h3>Ödəniş və Çatdırılma</h3>
+        </div>
+        <div class="row w-100">
+            <div class="col-12 col-lg-6">
+                <div class="content d-flex flex-column">
+                    <span><b>Ödəniş üsulları</b></span>
+                    <ol>
+                        <li>Təhvil alarkən <b>NAĞD</b> şəklində ödəyə bilərsiniz.</li>
+                        <li>"Online" olaraq bank  vasitəsilə;</li>
+                        <li>Təhvil nöqtəsində <b>POS</b> terminal vasitəsilə;</li>
+                    </ol>
+                    <span><b>Qeyd:</b> "Online" ödəniş edə bilməyiniz  üçün həm saytdan  qeydiyyatdan keçə bilərsiniz.</span>
+                    <span><b>Çatdırılma Qaydaları:</b></span>
+                    <ol>
+                        <li>Çatdırılma bütün ölkə daxilində həyata keçirilir.</li>
+                        <li>Sifariş olunan məhsulun və ya məhsulların ümumi dəyəri 200 AZN-dən çox olarsa, çatdırılma  pulsuz olunur. Sifariş olunan məhsul və ya məhsulların ümumi dəyəri 200 AZN-dən aşağı olduqda 10 AZN ödəniş tələb olunur.</li>
+                        <li>Bakı şəhəri üzrə sifariş olunan məhsullar 1(bir )iş günü müddətində müştərilərə çatdırılır.</li>
+                        <li>Regionlara çatdırılma 5(beş) iş günü ərzində müştərilərə çatdırılır.</li>
+                        <li>Sifarişlər fərdi yaşayış evləri istisna olmaqla, binaların girişinə qədər çatdırılır. Məhsulun  boşaldılması və ya mərtəbəyə qaldırılması çatdırılma xidmətinə daxil deyildir.</li>
+                        <li>Təhvil zamanı məhsullar fiziki qaydada həm alıcı tərəfindən yoxlanılaraq təhvil alınır, həm də əməkdaş tərəfindən yoxlanaraq təhvil verilir. Məhsulu aldığınız zaman xarici görünüşünə diqqət yetirin və heç bir texniki zədələnmə olmadığından əmin olun. Əməkdaşdan qaimə tələb edin və imzalayın.</li>
+                        <li>İstirahət və bayram günlərində sifarişlərdə gecikmələr ola bilər.</li>
+                        <li>Bəzi məhsullar sifariş əsasında hazırlandığı üçün ( anbarda hazır şəkildə stokda mövcud olmadığına görə) hazırlanıb çatdırılmasında gecikmə ola bilər.</li>  
+                    </ol>
+                </div>
+            </div>
+            <div class="col-12 col-lg-6 d-flex justify-content-center align-items-center">
+                <div class="image"><img src="../image/5-odenis-zemanet/img-1.jpg"></div>
+            </div>
+        </div>
+    </main>
 
 
     <footer class="py-5">
@@ -453,7 +485,7 @@
 
     <button id="page-up-scroll-btn" class="position-fixed bottom-0 end-0 hover-effect"><i class="fa-solid fa-arrow-up"></i></button>
     <div class="main-page-cards">
-        <div class="card-qaynar-xett">
+        <div class="card-qaynar-xett d-none d-md-block">
             <a href="#" class="d-flex align-items-center">
                 <i class="fa-solid fa-phone"></i>
                 <div class="d-flex flex-column align-items-center">
@@ -464,31 +496,31 @@
         </div>
         <div class="d-flex flex-column pt-5 card-items">
             <div class="card-sebet card-item">
-                <a href="../10-sebet/index.html" class="d-flex align-items-center">
+                <div class="d-flex align-items-center">
                     <div class="position-relative card-icon">
                         <i class="fa-solid fa-cart-shopping"></i>
                         <span class="sebet-counter card-counter">0</span> 
                     </div>
-                    <span class="card-label">Səbət</span>
-                </a>
+                    <a href="../10-sebet/index.html" class="card-label">Səbət</span>
+                </div>
             </div>
             <div class="card-secilen card-item">
-                <a href="../9-secilmisler/index.html" class="d-flex align-items-center">
+                <div class="d-flex align-items-center">
                     <div class="position-relative card-icon">
                         <i class="fa-regular fa-heart"></i>
                         <span class="secilen-counter card-counter">0</span> 
                     </div>
-                    <span class="card-label">Seçilmişlər</span>
-                </a>
+                    <a href="../9-secilmisler/index.html" class="card-label">Seçilmişlər</a>
+                </div>
             </div>
             <div class="card-secilen card-item">
-                <a href="../8-muqayise/index.html" class="d-flex align-items-center">
+                <div class="d-flex align-items-center">
                     <div class="position-relative card-icon">
                         <i class="fa-solid fa-scale-balanced"></i>
                         <span class="secilen-counter card-counter">0</span> 
                     </div>
-                    <span class="card-label">Müqayisələr</span>
-                </a>
+                    <a href="../8-muqayise/index.html" class="card-label">Müqayisələr</a>
+                </div>
             </div>
         </div>
     </div>
