--- a/7-elaqe/index.html
+++ b/7-elaqe/index.html
@@ -379,7 +379,35 @@
         </div>
     </header>
 
-    <main class="py-5"></main>
+    <main class="py-5 sobsan-contact container">
+        <div class="main-top-header d-flex flex-column w-100">
+            <div class="links"><a href="../1-main/index.html">Əsas Səhifə</a><i class="fa-solid fa-chevron-right"></i><a href="../7-elaqe/index.html">Əlaqə</a></div>
+            <h3>Əlaqə</h3>
+        </div>
+        <!-- <div class="d-flex justify-content-center w-100 py-4">
+            <div class="row w-100">
+                <div class="col-12 col-lg-6 border p-4">
+                    <div class="d-flex flex-column">
+                        <span class="form-text">Bütün sual və müraciətlərinizi rahatlıqla bizə ünvanlaya bilərsiniz. Ən qısa zamanda və böyük məmnuniyyətlə cavablandıracağıq.</span>
+                        <form action="#" autocomplete="off">
+                            <div class="form-floating">
+                                <input type="text" class="form-control" id="user-name" placeholder="adiniz">
+                                <label for="user-name">Ad, soyad *</label>
+                            </div>
+                            <div class="form-floating">
+                                <input type="email" class="form-control" id="user-email" placeholder="email">
+                                <label for="user-email">E-poçt *</label>
+                            </div>
+                            <div class="form-floating">
+                                <textarea id="user-message" class="form-control" placeholder="mesaj"></textarea>
+                                <label for="user-message">Mesajınız *</label>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+    </main>
 
 
     <footer class="py-5">
@@ -453,7 +481,7 @@
 
     <button id="page-up-scroll-btn" class="position-fixed bottom-0 end-0 hover-effect"><i class="fa-solid fa-arrow-up"></i></button>
     <div class="main-page-cards">
-        <div class="card-qaynar-xett">
+        <div class="card-qaynar-xett d-none d-md-block">
             <a href="#" class="d-flex align-items-center">
                 <i class="fa-solid fa-phone"></i>
                 <div class="d-flex flex-column align-items-center">
@@ -464,35 +492,34 @@
         </div>
         <div class="d-flex flex-column pt-5 card-items">
             <div class="card-sebet card-item">
-                <a href="../10-sebet/index.html" class="d-flex align-items-center">
+                <div class="d-flex align-items-center">
                     <div class="position-relative card-icon">
                         <i class="fa-solid fa-cart-shopping"></i>
                         <span class="sebet-counter card-counter">0</span> 
                     </div>
-                    <span class="card-label">Səbət</span>
-                </a>
+                    <a href="../10-sebet/index.html" class="card-label">Səbət</span>
+                </div>
             </div>
             <div class="card-secilen card-item">
-                <a href="../9-secilmisler/index.html" class="d-flex align-items-center">
+                <div class="d-flex align-items-center">
                     <div class="position-relative card-icon">
                         <i class="fa-regular fa-heart"></i>
                         <span class="secilen-counter card-counter">0</span> 
                     </div>
-                    <span class="card-label">Seçilmişlər</span>
-                </a>
+                    <a href="../9-secilmisler/index.html" class="card-label">Seçilmişlər</a>
+                </div>
             </div>
             <div class="card-secilen card-item">
-                <a href="../8-muqayise/index.html" class="d-flex align-items-center">
+                <div class="d-flex align-items-center">
                     <div class="position-relative card-icon">
                         <i class="fa-solid fa-scale-balanced"></i>
                         <span class="secilen-counter card-counter">0</span> 
                     </div>
-                    <span class="card-label">Müqayisələr</span>
-                </a>
+                    <a href="../8-muqayise/index.html" class="card-label">Müqayisələr</a>
+                </div>
             </div>
         </div>
     </div>
-
 
 
 
