--- a/4.3-media-qalereya/index.html
+++ b/4.3-media-qalereya/index.html
@@ -579,31 +579,31 @@
         </div>
         <div class="d-flex flex-column pt-5 card-items">
             <div class="card-sebet card-item">
-                <a href="../10-sebet/index.html" class="d-flex align-items-center">
+                <div class="d-flex align-items-center">
                     <div class="position-relative card-icon">
                         <i class="fa-solid fa-cart-shopping"></i>
                         <span class="sebet-counter card-counter">0</span> 
                     </div>
-                    <span class="card-label">Səbət</span>
-                </a>
+                    <a href="../10-sebet/index.html" class="card-label">Səbət</span>
+                </div>
             </div>
             <div class="card-secilen card-item">
-                <a href="../9-secilmisler/index.html" class="d-flex align-items-center">
+                <div class="d-flex align-items-center">
                     <div class="position-relative card-icon">
                         <i class="fa-regular fa-heart"></i>
                         <span class="secilen-counter card-counter">0</span> 
                     </div>
-                    <span class="card-label">Seçilmişlər</span>
-                </a>
+                    <a href="../9-secilmisler/index.html" class="card-label">Seçilmişlər</a>
+                </div>
             </div>
             <div class="card-secilen card-item">
-                <a href="../8-muqayise/index.html" class="d-flex align-items-center">
+                <div class="d-flex align-items-center">
                     <div class="position-relative card-icon">
                         <i class="fa-solid fa-scale-balanced"></i>
                         <span class="secilen-counter card-counter">0</span> 
                     </div>
-                    <span class="card-label">Müqayisələr</span>
-                </a>
+                    <a href="../8-muqayise/index.html" class="card-label">Müqayisələr</a>
+                </div>
             </div>
         </div>
     </div>
