--- a/6-zemanet-sertleri/index.html
+++ b/6-zemanet-sertleri/index.html
@@ -379,7 +379,44 @@
         </div>
     </header>
 
-    <main class="py-5"></main>
+    <main class="py-5 sobsan-zemanet container d-flex flex-column align-items-center justify-content-center">
+        <div class="main-top-header d-flex flex-column w-100">
+            <div class="links"><a href="../1-main/index.html">Əsas Səhifə</a><i class="fa-solid fa-chevron-right"></i><a href="../6-zemanet-sertleri/index.html">Zəmanət və geri qayarma siyasəti</a></div>
+            <h3>Zəmanət və Geri qaytarma siyasəti</h3>
+        </div>
+        <div class="row w-100">
+            <div class="col-12 col-lg-6">
+                <div class="content d-flex flex-column">
+                    <span><b>Zəmanət :</b></span>
+                    <ul>
+                        <li>Məhsulların keyfiyyət və orijinallığına görə şirkət tam şəkildə məsuliyyət daşıyır.</li>
+                        <li>Boya məhsulları və quru inşaat qarışıqlarının istifadə və saxlama müddəti qablaşmanın üzərində göstərilmişdir.</li>
+                        <li>Məhsulların istifadə və saxlanma təlimatına əməl olunmadığı təqdirdə, istehsalçı şirkət ortaya çıxan qüsur və nəticələrə görə məsuliyyət daşımır !</li>
+                        <li>"Online" ödənişlərdə müştərilərin kart təhlükəsizliyi tam yerinə yetirilir və kart sahibinin məxfi  kart məlumatları heç bir şəkildə saxlanılmır.</li>
+                    </ul>
+                    <span><b>Geri qaytarma :</b></span>
+                    <ul>
+                        <li>Məhsul təhvil alındığı anda: Əgər sifariş edilən məhsul müştərini əsaslı səbəblə qane etmirsə, yəni sifarişə uyğun olmayan məhsul göndərilibsə, məhsulun qablaşmasında fiziki qüsur varsa,(açılmış,zədələnmiş və ya məhsul zərər görmüşsə) qaytarıla bilər. Bu halda  geri qaytarma aktı tərtib edilərək, tərəflər təsdiq etdikdən sonra məhsul əməkdaş vasitəsilə geri qaytarılaraq anbara təhvil verilir.</li>
+                        <li>Geri qaytarılma nağd alış-verişdə həftə içi 5 gün 09:00- 17:00 arası, “online” ödəmələr bankın müəyyən etdiyi zaman dilimində hesaba qaytarılacaq.</li>
+                        <li>Müştəri “online” ödəmə etmişsə, geri qaytarma aktı əsasında əlaqədar banka ödəmənin geri qaytarılması üçün müraciət edilir. Bankın daxili proseduruna uyğun olaraq pul müştərinin hesabına müəyyən olunmuş müddətdə geri ödənilir.</li>
+                        <li>
+                            <span>Məhsul alındıqdan sonra 14 gün müddətində :</span>
+                            <ol>
+                                <li>Müştəri qaytarmaq istədiyi məhsulları heç bir fiziki zədə almadığı halda;</li>
+                                <li>Boya məhsullarının qapağı açılmadan;</li>
+                                <li>Digər məhsullar isə oriinal qablaşmasında - istifadə olunmadan və fiziki görüntüsü pozulmadan qaimə və qəbzi ilə birlikdə qaytarıla bilər.</li>
+                            </ol>
+                        </li>
+                        <li>Müştəri tərəfindən geri qaytarılacaq olan məhsullar Bakı şəhəri və regionlarda  satış menecerləri vasitəsilə  müştəri ilə  əlaqə saxlanılaraq  uyğun ünvanda təhvil alınır.</li>
+                        <li>İstənilən halda məhsullar geri götürülərkən şirkət nümayəndəsi tərəfindən mütləq şəkildə yoxlanılaraq təhvil alınır.</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-12 col-lg-6 d-flex justify-content-center align-items-center">
+                <div class="image"><img src="../image/5-odenis-zemanet/img-2.jpg"></div>
+            </div>
+        </div>
+    </main>
 
 
     <footer class="py-5">
@@ -453,7 +490,7 @@
 
     <button id="page-up-scroll-btn" class="position-fixed bottom-0 end-0 hover-effect"><i class="fa-solid fa-arrow-up"></i></button>
     <div class="main-page-cards">
-        <div class="card-qaynar-xett">
+        <div class="card-qaynar-xett d-none d-md-block">
             <a href="#" class="d-flex align-items-center">
                 <i class="fa-solid fa-phone"></i>
                 <div class="d-flex flex-column align-items-center">
@@ -464,31 +501,31 @@
         </div>
         <div class="d-flex flex-column pt-5 card-items">
             <div class="card-sebet card-item">
-                <a href="../10-sebet/index.html" class="d-flex align-items-center">
+                <div class="d-flex align-items-center">
                     <div class="position-relative card-icon">
                         <i class="fa-solid fa-cart-shopping"></i>
                         <span class="sebet-counter card-counter">0</span> 
                     </div>
-                    <span class="card-label">Səbət</span>
-                </a>
+                    <a href="../10-sebet/index.html" class="card-label">Səbət</span>
+                </div>
             </div>
             <div class="card-secilen card-item">
-                <a href="../9-secilmisler/index.html" class="d-flex align-items-center">
+                <div class="d-flex align-items-center">
                     <div class="position-relative card-icon">
                         <i class="fa-regular fa-heart"></i>
                         <span class="secilen-counter card-counter">0</span> 
                     </div>
-                    <span class="card-label">Seçilmişlər</span>
-                </a>
+                    <a href="../9-secilmisler/index.html" class="card-label">Seçilmişlər</a>
+                </div>
             </div>
             <div class="card-secilen card-item">
-                <a href="../8-muqayise/index.html" class="d-flex align-items-center">
+                <div class="d-flex align-items-center">
                     <div class="position-relative card-icon">
                         <i class="fa-solid fa-scale-balanced"></i>
                         <span class="secilen-counter card-counter">0</span> 
                     </div>
-                    <span class="card-label">Müqayisələr</span>
-                </a>
+                    <a href="../8-muqayise/index.html" class="card-label">Müqayisələr</a>
+                </div>
             </div>
         </div>
     </div>
