--- a/4.3-media-qalereya/index.html
+++ b/4.3-media-qalereya/index.html
@@ -617,5 +617,25 @@
     <script src="../bootstrap/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
     <script src="../main.js"></script>
+    <script>
+        let buttonFoto = document.querySelector(".gallery-buttons .button-foto");
+        let buttonVideo = document.querySelector(".gallery-buttons .button-video");
+        let wrapperFoto = document.querySelector(".foto-wrapper");
+        let wrapperVideo = document.querySelector(".video-wrapper");
+
+        buttonFoto.addEventListener("click",function(){
+            buttonVideo.classList.remove("gallery-active");
+            buttonFoto.classList.add("gallery-active");
+            wrapperVideo.classList.add("d-none");
+            wrapperFoto.classList.remove("d-none");
+        });
+
+        buttonVideo.addEventListener("click",function(){
+            buttonFoto.classList.remove("gallery-active");
+            buttonVideo.classList.add("gallery-active");
+            wrapperFoto.classList.add("d-none");
+            wrapperVideo.classList.remove("d-none");
+        });
+    </script>
 </body>
 </html>
