--- a/7-elaqe/index.html
+++ b/7-elaqe/index.html
@@ -384,29 +384,41 @@
             <div class="links"><a href="../1-main/index.html">Əsas Səhifə</a><i class="fa-solid fa-chevron-right"></i><a href="../7-elaqe/index.html">Əlaqə</a></div>
             <h3>Əlaqə</h3>
         </div>
-        <!-- <div class="d-flex justify-content-center w-100 py-4">
+        <div class="d-flex justify-content-center w-100 py-4">
             <div class="row w-100">
                 <div class="col-12 col-lg-6 border p-4">
-                    <div class="d-flex flex-column">
-                        <span class="form-text">Bütün sual və müraciətlərinizi rahatlıqla bizə ünvanlaya bilərsiniz. Ən qısa zamanda və böyük məmnuniyyətlə cavablandıracağıq.</span>
-                        <form action="#" autocomplete="off">
-                            <div class="form-floating">
-                                <input type="text" class="form-control" id="user-name" placeholder="adiniz">
-                                <label for="user-name">Ad, soyad *</label>
-                            </div>
-                            <div class="form-floating">
-                                <input type="email" class="form-control" id="user-email" placeholder="email">
-                                <label for="user-email">E-poçt *</label>
-                            </div>
-                            <div class="form-floating">
-                                <textarea id="user-message" class="form-control" placeholder="mesaj"></textarea>
-                                <label for="user-message">Mesajınız *</label>
-                            </div>
+                    <div class="d-flex flex-column align-items-center">
+                        <span class="form-text text-center text-lg-start align-self-lg-start">Bütün sual və müraciətlərinizi rahatlıqla bizə ünvanlaya bilərsiniz. Ən qısa zamanda və böyük məmnuniyyətlə cavablandıracağıq.</span>
+                        <form action="#" autocomplete="off" class="w-100 d-flex flex-column my-4 px-3">
+                            <input type="text" class="form-control" id="user-name" placeholder="Ad, soyad *" required>
+                            <input type="email" class="form-control" id="user-email" placeholder="E-poçt *" required>
+                            <textarea id="user-message" class="form-control" placeholder="Mesajınız *" required></textarea>
+                            <button type="submit" class="form-sumbit-btn align-self-center align-self-lg-start">Göndər</button>
                         </form>
                     </div>
                 </div>
+                <div class="col-12 col-lg-6 d-flex">
+                    <div class="contact-right">
+                        <div class="panel">
+                            <i class="fa-solid fa-phone icon"></i>
+                            <a href="#">Tel: (+994 12) 404 45 45</a>
+                            <a href="#">Tel: *4545</a>
+                            <a href="#">Fax: (+994 12) 525 00 45</a>
+                        </div>
+                        <div class="panel">
+                            <i class="fa-solid fa-envelope icon"></i>
+                            <a href="#">sobsan@sobsan.com</a>
+                        </div>
+                        <i class="fa-solid fa-location-dot icon"></i>
+                        <div class="sosial-icons">
+                            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div> -->
+        </div>
     </main>
 
 
