--- a/11.2-register/index.html
+++ b/11.2-register/index.html
@@ -379,7 +379,58 @@
         </div>
     </header>
 
-    <main class="py-5"></main>
+    <main class="py-5 sobsan-login container">
+        <div class="main-top-header d-flex flex-column w-100">
+            <div class="links"><a href="../1-main/index.html">Əsas Səhifə</a><i class="fa-solid fa-chevron-right"></i><a href="../11.2-register/index.html">Qeydiyyat</a></div>
+            <h3>Qeydiyyat</h3>
+        </div>
+        <div class="d-flex justify-content-center w-100 py-4 my-4">
+            <div class="row w-100">
+                <div class="col-12 col-lg-8 border d-flex align-items-center p-4">
+                    <form action="#" autocomplete="off" class="w-100 d-flex flex-column my-4 px-3">
+                        <div class="row">
+                            <div class="col-12 col-lg-6 my-3">
+                                <input type="text" class="form-control" placeholder="Ad *" id="user-lastname" required>
+                            </div>
+                            <div class="col-12 col-lg-6 my-3">
+                                <input type="text" class="form-control" placeholder="Soyad *" id="user-firstname" required>
+                            </div>
+                            <div class="col-12 col-lg-6 my-3">
+                                <input type="text" class="form-control" placeholder="Telefon *" id="user-phone" required>
+                            </div>
+                            <div class="col-12 col-lg-6 my-3">
+                                <input type="text" class="form-control" placeholder="Ünvan *" id="user-location" required>
+                            </div>
+                            <div class="col-12 my-3">
+                                <input type="email" class="form-control" placeholder="E-poçt *" id="user-email" required>
+                            </div>
+                            <div class="col-12 col-lg-6 my-3">
+                                <input type="password" class="form-control" placeholder="Şifrə *" id="user-pwd-1" required>
+                            </div>
+                            <div class="col-12 col-lg-6 my-3">
+                                <input type="password" class="form-control" placeholder="Şifrənizi təsdiq edin *" id="user-pwd-2" required>
+                            </div>
+                            <div class="col-12 d-flex justify-content-between justify-content-lg-start my-4">
+                                <button type="submit" class="form-red-btn">Göndər</button>
+                                <button type="submit" class="form-white-btn d-lg-none"><a href="../11.2-register/index.html">Qeydiyyat</a></button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="d-none d-lg-flex col-12 col-lg-4">
+                    <div class="contact-right">
+                        <a href="../1-main/index.html" class="logo"><img src="../image/logo/sobsan-white-logo.svg"></a>
+                        <div class="sosial-icons">
+                            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                        </div>
+                        <button type="submit" class="form-white-btn mt-5"><a href="../11.2-register/index.html">Qeydiyyat</a></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 
 
     <footer class="py-5">
