--- a/11.1-login/index.html
+++ b/11.1-login/index.html
@@ -379,7 +379,38 @@
         </div>
     </header>
 
-    <main class="py-5"></main>
+    <main class="py-5 sobsan-login container">
+        <div class="main-top-header d-flex flex-column w-100">
+            <div class="links"><a href="../1-main/index.html">Əsas Səhifə</a><i class="fa-solid fa-chevron-right"></i><a href="../11.1-login/index.html">Giriş</a></div>
+            <h3>Giriş</h3>
+        </div>
+        <div class="d-flex justify-content-center w-100 py-4 my-4">
+            <div class="row w-100">
+                <div class="col-12 col-md-6 border d-flex align-items-center p-4">
+                    <form action="#" autocomplete="off" class="w-100 d-flex flex-column my-4 px-3">
+                        <input type="email" class="form-control my-4" id="user-email" placeholder="E-poçt *" required>
+                        <input type="password" class="form-control my-4" id="user-pwd" placeholder="Şifrə *" required>
+                        <a href="../11.3-forget-pwd/index.html">Şifrəmi unutdum</a>
+                        <div class="w-100 d-flex justify-content-between justify-content-md-start my-4">
+                            <button type="submit" class="form-red-btn">Göndər</button>
+                            <button type="submit" class="form-white-btn d-md-none"><a href="../11.2-register/index.html">Qeydiyyat</a></button>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-12 col-md-6 d-none d-md-flex">
+                    <div class="contact-right">
+                        <a href="../1-main/index.html" class="logo"><img src="../image/logo/sobsan-white-logo.svg"></a>
+                        <div class="sosial-icons">
+                            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                        </div>
+                        <button type="submit" class="form-white-btn mt-5"><a href="../11.2-register/index.html">Qeydiyyat</a></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 
 
     <footer class="py-5">
