--- a/7-elaqe/index.html
+++ b/7-elaqe/index.html
@@ -386,14 +386,14 @@
         </div>
         <div class="d-flex justify-content-center w-100 py-4">
             <div class="row w-100">
-                <div class="col-12 col-lg-6 border p-4">
+                <div class="col-12 col-lg-6 border p-4 my-4">
                     <div class="d-flex flex-column align-items-center">
                         <span class="form-text text-center text-lg-start align-self-lg-start">Bütün sual və müraciətlərinizi rahatlıqla bizə ünvanlaya bilərsiniz. Ən qısa zamanda və böyük məmnuniyyətlə cavablandıracağıq.</span>
                         <form action="#" autocomplete="off" class="w-100 d-flex flex-column my-4 px-3">
-                            <input type="text" class="form-control" id="user-name" placeholder="Ad, soyad *" required>
-                            <input type="email" class="form-control" id="user-email" placeholder="E-poçt *" required>
-                            <textarea id="user-message" class="form-control" placeholder="Mesajınız *" required></textarea>
-                            <button type="submit" class="form-sumbit-btn align-self-center align-self-lg-start">Göndər</button>
+                            <input type="text" class="form-control my-4" id="user-name" placeholder="Ad, soyad *" required>
+                            <input type="email" class="form-control my-4" id="user-email" placeholder="E-poçt *" required>
+                            <textarea id="user-message" class="form-control my-4" placeholder="Mesajınız *" required></textarea>
+                            <button type="submit" class="form-red-btn align-self-center align-self-lg-start">Göndər</button>
                         </form>
                     </div>
                 </div>
@@ -401,13 +401,13 @@
                     <div class="contact-right">
                         <div class="panel">
                             <i class="fa-solid fa-phone icon"></i>
-                            <a href="#">Tel: (+994 12) 404 45 45</a>
-                            <a href="#">Tel: *4545</a>
-                            <a href="#">Fax: (+994 12) 525 00 45</a>
+                            <a href="#" class="link">Tel: (+994 12) 404 45 45</a>
+                            <a href="#" class="link">Tel: *4545</a>
+                            <a href="#" class="link">Fax: (+994 12) 525 00 45</a>
                         </div>
                         <div class="panel">
                             <i class="fa-solid fa-envelope icon"></i>
-                            <a href="#">sobsan@sobsan.com</a>
+                            <a href="#" class="link">sobsan@sobsan.com</a>
                         </div>
                         <i class="fa-solid fa-location-dot icon"></i>
                         <div class="sosial-icons">
